ADD_SUBDIRECTORY(adobe_drm_engine)
ADD_SUBDIRECTORY(adobe_view_engine)
ADD_SUBDIRECTORY(screen_manager)
ADD_SUBDIRECTORY(ej)
ADD_SUBDIRECTORY(gpio)
ADD_SUBDIRECTORY(network_service)
ADD_SUBDIRECTORY(pppd_onyx_plugin)
ADD_SUBDIRECTORY(handwriting)
ADD_SUBDIRECTORY(kermit)
ADD_SUBDIRECTORY(private_conf)
ADD_SUBDIRECTORY(message)
ADD_SUBDIRECTORY(serial_port)
ADD_SUBDIRECTORY(paginator)
ADD_SUBDIRECTORY(i2c)
ADD_SUBDIRECTORY(compression)

ADD_SUBDIRECTORY(ebookstore)
