
ENABLE_QT()
ADD_DEFINITIONS(${QT_DEFINITIONS})
ADD_DEFINITIONS(-DQT_PLUGIN)
ADD_DEFINITIONS(-DQT_NO_DEBUG)
ADD_DEFINITIONS(-DQT_SHARED)
IF(UNIX)
    ADD_DEFINITIONS(-DPLATFORM_POSIX)
ELSE (UNIX)
    ADD_DEFINITIONS(-DPLATFORM_WINDOWS)
ENDIF (UNIX)
include_directories(
             BEFORE
     ${CMAKE_SOURCE_DIR})
link_directories(${CMAKE_SOURCE_DIR}/lib/ej/lib ${CMAKE_SOURCE_DIR}/lib)
FILE(GLOB EJ_HDRS *.h)
FILE(GLOB EJ_SRCS *.cpp)
SET(EJ_FILE_SRCS file_func/Win_Linux_file_func.c)
SET(TTS_INTERFACE ../../../../sdk/code/include/onyx/tts/tts_interface.h)
SET(MOC_HDRS ${HDRS} ${TTS_INTERFACE} ${EJ_HDRS})
QT4_WRAP_CPP(MOC_SRCS ${MOC_HDRS})

ADD_LIBRARY(tts_ej SHARED ${EJ_SRCS} ${EJ_HDRS} ${MOC_SRCS} ${EJ_FILE_SRCS})

if(BUILD_FOR_ARM)
   TARGET_LINK_LIBRARIES(tts_ej ejTTS sound
   onyx_ui
   ${QT_LIBRARIES}
   ${ADD_LIB} )
else(BUILD_FOR_ARM)
   TARGET_LINK_LIBRARIES(tts_ej sound
   onyx_ui
   ${QT_LIBRARIES}
   ${ADD_LIB} )
endif(BUILD_FOR_ARM)

